[workspace]
members = ["packages/*", "examples/*", "faucet"]
resolver = "2"

[workspace.dependencies]
# Local
layer-climb = { path = "packages/layer-climb" }
layer-climb-address = { path = "packages/layer-climb-address" }
layer-climb-cli = { path = "packages/layer-climb-cli" }
layer-climb-config = { path = "packages/layer-climb-config" }
layer-climb-core = { path = "packages/layer-climb-core" }

# General
cfg-if = "1.0.0"
async-trait = "0.1.82"

# Error handling
thiserror = "1.0.61"
anyhow = "1.0.86"

# Binary encoding
hex = "0.4.3"
base64 = "0.22.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.22"

# Serdeish
toml = "0.8.14"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Crypto
bip39 = "2.0.0" # TODO - can we just use bip39 from bip32?
bip32 = { version = "0.5.2", default-features = false, features = ["alloc", "secp256k1"] }
signature = "2.2.0"
k256 = "0.13.4"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }

# Networking
reqwest = {version = "0.12.5", features=["json"]} 
url = "2.5.2"

# Async
futures = "0.3"
# TODO: waiting for https://github.com/smol-rs/async-broadcast/pull/61 to land
async-broadcast = { git = "https://github.com/smol-rs/async-broadcast.git", rev="de420a3b6e72939d96250573c7c242d0ff195424"}

# Randomness
rand = "0.8.5"

# Cosmos
cosmwasm-std = "2.0.3"
tendermint = {version = "0.39.1", features = ["secp256k1"]}
tendermint-rpc = {version = "0.39.1", default-features = false}

# Proto
cosmos-sdk-proto = {version = "0.25.0", default-features = false, features = ["std", "cosmwasm", "grpc"]} 
tendermint-proto = {version = "0.39.1", default-features = false} 

# Wasm
tonic-web-wasm-client = "0.6.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.70"

# Native application (cli/server) stuff
clap = { version = "4.5.7", features = ["derive"] }
dotenvy = {version = "0.15.7", features = ["cli"]}
tokio = { version = "1", features = ["full"] }
axum = {version = "0.7.7", features = ["macros"]}
tower-http = {version = "0.6.1", features = ["cors"] }

# Pool
deadpool = "0.12.1"

# Browser stuff
dominator = "0.5.38"
futures-signals = "0.3.34"
gloo-events = "0.2.0"
gloo-timers = {version = "0.3.0", features = ["futures"]}
dominator_helpers = {version = "0.8.0", default-features = false}
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
