[workspace]
members = ["packages/*", "examples/*", "faucet", "integration-test"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Lay3rLabs/climb"

[workspace.dependencies]
# Local
layer-climb = { path = "packages/layer-climb", version = "0.5.0" }
layer-climb-address = { path = "packages/layer-climb-address", version = "0.5.0" }
layer-climb-cli = { path = "packages/layer-climb-cli", version = "0.5.0" }
layer-climb-config = { path = "packages/layer-climb-config", version = "0.5.0" }
layer-climb-core = { path = "packages/layer-climb-core", version = "0.5.0" }
layer-climb-proto = { path = "packages/layer-climb-proto", version = "0.5.0" }

# General
cfg-if = "1.0.1"
async-trait = "0.1.88"
utoipa = { version = "5.4.0" }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Binary encoding
hex = "0.4.3"
base64 = "0.22.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
log = "0.4.27"

# Serdeish
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Crypto
bip39 = "2.2.0" # TODO - can we just use bip39 from bip32?
bip32 = { version = "0.5.3", default-features = false, features = [
    "alloc",
    "secp256k1",
] }
signature = "2.2.0"
k256 = "0.13.4"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
rustls = { version = "0.23.28", features = ["ring"] }

# Networking
reqwest = { version = "0.12.22", features = ["json"] }
url = "2.5.4"

# Async
futures = "0.3"
async-broadcast = "0.7.2"

# Randomness
rand = "0.9.1"

# Cosmos
cosmwasm-std = "3.0.1"
tendermint = { version = "0.40.4", features = ["secp256k1"] }
tendermint-rpc = { version = "0.40.4", default-features = false }

# Proto
cosmos-sdk-proto = { version = "0.27.0", default-features = false, features = [
    "std",
    "cosmwasm",
    "grpc",
] }
tendermint-proto = { version = "0.40.4", default-features = false }

# Wasm
tonic-web-wasm-client = "0.7.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"

# Native application (cli/server) stuff
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.3"

# Pool
deadpool = "0.12.2"

# Alloy
alloy-primitives = "1.2.1"

# Browser stuff
dominator = "0.5.38"
futures-signals = "0.3.34"
gloo-events = "0.2.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
dominator_helpers = { version = "0.8.0", default-features = false }
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

# WASI 
wstd = "0.5.3"
