[package]
name = "layer-climb-faucet"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
### Workspace dependencies ###
layer-climb = { workspace = true }
serde = { workspace = true } 
serde_json = {workspace = true} 
anyhow = {workspace = true}
clap = { workspace = true}
futures = {workspace = true}
tracing = {workspace = true}
dotenvy = {workspace = true} 
tracing-subscriber = {workspace = true} 
deadpool = {workspace = true}
tokio = {workspace = true}
axum = {workspace = true}
toml = {workspace = true}
thiserror = {workspace = true}
tower-http = {workspace = true}

[dev-dependencies]
tower = { workspace = true} 
http-body-util = {workspace = true}
rand = {workspace = true}
bip39 = {workspace = true}