[package]
name = "example-wasi"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
layer-climb = { workspace = true }
cfg-if = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen = "0.39.0"
wit-bindgen-rt = {version = "0.39.0", features = ["bitflags", "async"]}
wstd = "0.5.0"
wasi = "0.14.0"
wavs-wasi-chain = "0.3.0-alpha2"