[package]
name = "example-wasi"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
layer-climb = { workspace = true }
cfg-if = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wstd = { workspace = true }
wit-bindgen = "0.43.0"
wit-bindgen-rt = {version = "0.43.0", features = ["bitflags", "async"]}
wasi = "0.14.2"
